# PG3Render-2014

./: CMakeLists.txt  PG3Render.vcxproj  PG3Render.vcxproj.filters  README.md  areaLightDebug.hdr  areaLightDebugVersion1.hdr  areaLightDebugVersion2.hdr  bgLightDebug.hdr  directillumination.h  heading.txt  scene0.hdr  scene1.hdr  scene2.hdr  scene3.hdr  scene4.hdr  scene5.hdr  scene6.hdr  scene7_100s.hdr  testDebug.hdr
Debug/: PG3Render.ilk  vc141.idb
Debug/PG3Render.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  PG3Render.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/: config.hxx  directillum.hxx  embree_util.hxx  geometry.hxx  lights.hxx  materials.hxx  pathtracer.hxx  pg3render.cxx  rng.hxx  scene.hxx
